--- a/ProjectOne/css/styles.css
+++ b/ProjectOne/css/styles.css
@@ -2,3 +2,19 @@
   font-size: 32px;
 color: blue;
 }
+.footer{
+  padding: 20px 0;
+  bottom: 0;
+  width: 100%;
+  height: 250px;
+  background-color: #333;
+  color: #efefef;
+
+}
+.footer a{
+  color: #9af7f3;
+}
+/*activas si.... haz el cambio*/
+@media only screen and (max-width: 768px){
+  .footer{height: 400px;}
+}
